--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VITE_COURSE_API = https://course.spacedev.vn/elearning/v4
 VITE_ORGANIZATION_API = https://course.spacedev.vn/organization
+VITE_USER_API = https://course.spacedev.vn/users
+VITE_AUTHENTICATION_API = https://course.spacedev.vn/authentication/v2
