--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "antd": "^5.0.4",
     "axios": "^1.2.0",
     "classnames": "^2.3.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.4"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.4",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
